--- a/config/database.yml
+++ b/config/database.yml
@@ -83,9 +83,10 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: posts_production
-    username: posts
-    password: <%= ENV["POSTS_DATABASE_PASSWORD"] %>
+    # database: posts_production
+    # username: posts
+    # password: <%= ENV["POSTS_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
   cache:
     <<: *primary_production
     database: posts_production_cache
